# agentoperator-outbound-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
clients/: aiark.py  apollo.py  findymail.py  gmail.py  leadmagic.py  slack.py
config/: settings.py
config/voice/: andys_voice.md  email_patterns.md
examples/edtech_contech_batch1/: README.md  icp.yaml
examples/edtech_contech_batch1/companies/: accounts.json
examples/edtech_contech_batch1/drafts/: SEND_SHEET.md
examples/edtech_contech_batch1/handoffs/: PHASE_6.md
examples/edtech_contech_batch1/people/: shortlist.json
examples/edtech_contech_batch1/research/: buildops.md  seesaw.md
pipeline/: enrichment.py  icp.py  people_search.py  research.py  scheduler.py  scorer.py  target_accounts.py  writer.py
skills/build-target-accounts/: SKILL.md
skills/define-icp/: SKILL.md
skills/enrich-emails/: SKILL.md
skills/find-people-at-accounts/: SKILL.md
skills/plan-campaign/: SKILL.md
skills/research-company-and-contact/: SKILL.md
skills/schedule-sends/: SKILL.md
skills/write-email-and-linkedin/: SKILL.md
templates/: CAMPAIGN_PLAN.md  HANDOFF_PHASE_N.md  SEND_SHEET_example.md  icp.example.yaml
tests/: test_gmail.py  test_icp.py  test_scheduler.py
